<resources>
    <string name="app_name">云帆</string>

    <string name="news">新闻</string>
    <string name="chat">聊天</string>
    <string name="joke">笑话</string>
    <string name="me">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_news_channel">EditNewsChannelActivity</string>
    <string name="title_activity_news_detail_web">NewsDetailWebActivity</string>
    <string name="share">分享</string>
    <string name="close">关闭</string>
    <string name="video">视频</string>
    <string name="personal_center">个人中心</string>
    <string name="un_login">未登录</string>
    <string name="my_message">我的消息</string>
    <string name="my_collection">我的收藏</string>
    <string name="system_setting">系统设置</string>
    <string name="night_theme">夜间模式</string>
    <string name="save_mobile_data">省流量模式</string>
    <string name="check_network_and_retry">请检查网络后重试</string>
    <string name="retry">重试</string>
    <string name="neterror_and_check_your_network_setting">当前网络不可用，请检查你的网络设置</string>
    <string name="logout">退出登录</string>
    <string name="more">更多</string>
</resources>
