<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/grayContentBackground"
    android:orientation="vertical"
    tools:context="com.yang.yunfan.ui.main.MeFragment">

   <View
       android:id="@+id/status_bar"
       android:layout_width="match_parent"
       android:layout_height="@dimen/status_bar_height"
       android:background="#199475"/>

   <android.support.v7.widget.Toolbar
       android:id="@+id/tool_bar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:layout_alignParentTop="true"
       android:background="#199475"
       app:popupTheme="@style/AppTheme.PopupOverlay"
       app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       app:title=""
       >

      <TextView
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:textColor="?attr/whiteTextColor"
          android:textSize="@dimen/text_size_menu_material"
          />

   </android.support.v7.widget.Toolbar>

   <RelativeLayout
       android:id="@+id/rl_person_layout"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:background="#199475"
       android:clickable="true"
       >

      <ImageView
          android:id="@+id/iv_person"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginLeft="30dp"
          android:src="@drawable/person"
          />


      <TextView
          android:id="@+id/tv_person_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/iv_person"
          android:layout_marginLeft="30dp"
          android:src="@drawable/person"
          android:textColor="?attr/whiteTextColor"
          android:textSize="@dimen/text_size_medium_material"
          android:text="@string/un_login"
          />


      <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_centerVertical="true"
          android:layout_marginRight="30dp"
          android:scaleType="fitXY"
          android:src="@drawable/right_arrow_white"
          android:layout_alignParentRight="true"
          />

   </RelativeLayout>


   <View
       android:layout_width="match_parent"
       android:layout_height="1px"
       android:layout_alignParentBottom="true"
       android:background="?attr/grayLineColor"
       android:layout_marginTop="25dp"
       />

   <com.yang.yunfan.widget.ImageTextItemView
       android:id="@+id/mgiv_my_message"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       app:itemText="@string/my_message"
       />
   <com.yang.yunfan.widget.ImageTextItemView
       android:id="@+id/mgiv_my_collection"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       app:itemText="@string/my_collection"
       />


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:clickable="true"
       android:background="?attr/whiteContentBackground"
       >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/text_size_menu_material"
          android:textColor="?attr/blackTextColor"
          android:layout_centerVertical="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="25dp"
          android:text="@string/night_theme"
          />

      <com.suke.widget.SwitchButton
          android:id="@+id/sb_night_theme"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:layout_marginRight="13dp"
          app:sb_show_indicator="false"
          app:sb_checked="false"
          />

      <View
          android:id="@+id/v_line"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_alignParentBottom="true"
          android:background="?attr/grayLineColor"
          android:layout_marginLeft="25dp"/>
   </RelativeLayout>



   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:clickable="true"
       android:background="?attr/whiteContentBackground"
       >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/text_size_menu_material"
          android:textColor="?attr/blackTextColor"
          android:layout_centerVertical="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="25dp"
          android:text="@string/save_mobile_data"
          />

      <com.suke.widget.SwitchButton
          android:id="@+id/sb_save_mobile_data"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:layout_marginRight="13dp"
          app:sb_show_indicator="false"
          app:sb_checked="false"
          />
   </RelativeLayout>

   <View
       android:layout_width="match_parent"
       android:layout_height="1px"
       android:layout_alignParentBottom="true"
       android:background="?attr/grayLineColor"
       />


   <View
       android:layout_width="match_parent"
       android:layout_height="1px"
       android:layout_alignParentBottom="true"
       android:background="?attr/grayLineColor"
       android:layout_marginTop="20dp"
       />

   <com.yang.yunfan.widget.ImageTextItemView
       android:id="@+id/mgiv_system_setting"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       app:itemText="@string/system_setting"
       app:bottomLine="gone"
       />

   <View
       android:layout_width="match_parent"
       android:layout_height="1px"
       android:layout_alignParentBottom="true"
       android:background="?attr/grayLineColor"
       />

</LinearLayout>
